# BuildingDepot

./: .gitignore  .gitmodules  CNAME  Dockerfile  Gemfile  README.md  _config.yml  bd_install.sh  bd_oauth2.py  docker-compose.yml  entrypoint.sh  env.sample  install.sh  license.txt  nano.save  oauth2.py  package.json  pip_packages.list  pyproject.toml  script_for_github_actions.sh  setup_bd.py  test_install.sh
Brick/: Brick.ttl  BrickFrame.ttl  BrickTag.ttl  MakeBrick.py
CentralReplica/: models.py
_includes/: head.html  page-footer.html  page-header.html
_layouts/: default.html
apps-available/: huaipeng_ds.ini
buildingdepot/: pip_packages.list
conf.d/: supervisor-ds.conf  supervisor-replica.conf
configs/: bd-central.service  bd-data.service  bd-replica.service  bd_config.json  bd_settings.cfg.sample  bd_settings.cfg.template  certbot_post_hook.sh  nginx.conf  nginx_docker.conf  nginx_sites.conf  nginx_sites_ssl.conf  nginx_sites_ssl.conf.sample  rabbitmq.conf  supervisor-cs.conf  supervisor-ds.conf  supervisor-oauth.conf  supervisor-replica.conf  together.conf  together_ssl.conf  uwsgi_cs.ini  uwsgi_ds.ini
deploy/: install.py
docker/: .env.example  Dockerfile.bd  IMPLEMENTATION.md  README.md  bootstrap_admin.sh  docker-compose.yml  nginx.conf  rabbitmq.conf  refresh-cert.sh  setup.sh
docs/: .buildinfo  .buildinfo.bak  centralservice.html  dataservice.html  deployment.md  docker-implementation.md  objects.inv  rabbitmq-auth.md  searchindex.js
graph_db_temporary/: .travis.yml  README.md  requirements.txt
lib/: dataGenerator.js  performanceTest.js  (+1 more)
(+354 files in other folders)
