[project]
name = "buildingdepot"
version = "3.4.0"
description = "An open source data storage, management, and actuation system for building-related data"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aniso8601==8.0.0",
    "email-validator==1.1.1",
    "firebase-admin>=7.0.0",
    "flask>=2.1.3,<3",
    "flask-bootstrap==3.3.7.1",
    "flask-login==0.5.0",
    "flask-oauthlib==0.9.6",
    "flask-script==2.0.6",
    "flask-wtf==0.14.3",
    "gunicorn>=23.0.0,<24",
    "influxdb==5.3.1",
    "itsdangerous==2.0.1",
    "jinja2==3.0.3",
    "jsonschema==3.2.0",
    "mongoengine==0.29.1",
    "pika==1.1.0",
    "pymongo==4.9",
    "pyyaml>=6.0.3",
    "redis==5.0.1",
    "sphinx==3.0.4",
    "sphinx-theme==1.0",
    "sphinxcontrib-httpdomain==1.8.1",
    "werkzeug==2.0.3",
    "wheel==0.42.0",
]
